--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 ---
 permalink: /404.html
 ---
-What you are looking for is probably in our archives https://archive.openconcept.ca
+What you are looking for is probably in [our archives](https://archive.openconcept.ca).
